--- a/MyPodcast/Search/View/PodcastCell.xib
+++ b/MyPodcast/Search/View/PodcastCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="492" height="138.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hkj-kb-EBK">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hkj-kb-EBK">
                         <rect key="frame" x="20" y="19" width="100" height="100"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="s6M-vP-Lhz"/>
